FIX: [9.7_RC] Prevent Edit selected and Clear selected buttons overlapping the top right pager at certain screen sizes [t29592]
git-svn-id: http://svn.resourcespace.com/svn/rs/releases/9.7_RC@18380 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -309,7 +309,7 @@ div#CentralSpaceContainer.SlimHeaderFixedPosition { margin-top: 100px; }
 .TopInpageNav {clear: left;margin-bottom:15px;margin-right: 0;position:relative;min-height: 30px;}
 .BottomInpageNav {clear: left;padding-top: 5px;margin: 20px 15px 20px 0; position:relative;}
 .BottomInpageKey {margin-right: 15px; clear: left; text-align: left;}
-.TopInpageNavLeft{float:left;}
+.TopInpageNavLeft{float:left; width: 90%;}
 .TopInpageNavRight{position:absolute;right:0;top:3px;width:max-content;text-align:right;}
 .InpageNavLeftBlock {display:inline-block; *display: inline; *zoom: 1;text-align:left;margin: 0 20px 0 0;}
 .InpageNavRightBlock {display:inline-block; *display: inline; *zoom: 1;text-align:left;margin: 0 15px 0 0;}
